--- a/dentist/website/templates/pages/about.html
+++ b/dentist/website/templates/pages/about.html
@@ -18,8 +18,8 @@
         <div class="col-12">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="{% url 'home' %}"><i class="fa fa-home"></i> HOME</a></li>
-              <li class="breadcrumb-item active" aria-current="page">ÜBER UNS</li>
+              <li class="breadcrumb-item"><a href="{% url 'home' %}"><i class="fa fa-home"></i>Home</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Über uns</li>
             </ol>
           </nav>
         </div>
@@ -33,48 +33,22 @@
     <div class="container">
       <div class="row align-items-center">
         <!-- About Us Thumbnail -->
-        <div class="col-12 col-md-6">
+
+        <div class="col-12 col-md-8">
           <div class="about-us-thumbnail mb-50">
-            <img src="{% static 'website/img/bg_img/15.jpg' %}" alt="">
+            <img src="{% static 'website/img/bg_img/bg_photo_about_us.png' %}" alt="">
           </div>
         </div>
         <!-- About Content -->
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-4">
           <div class="about-us-content mb-50">
             <!-- Section Heading -->
             <div class="section-heading">
-              <h2>About Us</h2>
+              <h2>Über Uns</h2>
               <div class="line"></div>
             </div>
-            <p>Vestibulum condimentum, risus sedones honcus rutrum, salah lacus mollis zurna, nec finibusmi velit advertisis. Proin vitae odin quis magna aliquet laciniae. Etiam auctor, nisi vel. Pellentesque ultrices nisl quam iaculis, nec pulvinar
-              augue.</p>
+            <p>We look into detail and we strive for great care to our dental costumers. Book an appointment with us and you wont be dissapointed</p>
 
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Experience Dentist</h6>
-              <div id="bar1" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="100"></span>
-              </div>
-            </div>
-
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Modern Equipment</h6>
-              <div id="bar2" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="90"></span>
-              </div>
-            </div>
-
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Friendly Staff</h6>
-              <div id="bar3" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="95"></span>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -141,7 +115,7 @@
             <div class="single-testimonial-slide d-flex align-items-center">
               <!-- Thumbnail -->
               <div class="testimonial-thumb">
-                <img src="{% static 'website/img/bg_img/milli1.jpg' %}" alt="">
+                <img src="{% static 'website/img/bg_img/milli_nt.jpg' %}" alt="">
               </div>
               <!-- Content -->
               <div class="testimonial-content">
@@ -171,7 +145,7 @@
             <div class="single-testimonial-slide d-flex align-items-center">
               <!-- Thumbnail -->
               <div class="testimonial-thumb">
-                <img src="{% static 'website/img/bg_img/8.jpg' %}" alt="">
+                <img src="{% static 'website/img/bg_img/aris.jpg' %}" alt="">
               </div>
               <!-- Content -->
               <div class="testimonial-content">
@@ -200,19 +174,17 @@
           </div>
         </div>
       </div>
-
+  
       <div class="row">
         <!-- Single Dentist Area -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/milli1.jpg' %}" alt="">
+            <img src="{% static 'website/img/bg_img/milli1_nt.jpg' %}" alt="">
             <!-- Dentist Content -->
             <div class="dentist-content">
               <!-- Social Info -->
               <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
+                <a><img src="{% static 'website/img/core_img/dentist.png' %}" alt=""></a>
               </div>
               <!-- Dentist Info -->
               <div class="dentist-info bg-gradient-overlay">
@@ -223,105 +195,95 @@
           </div>
         </div>
       </div>
-
+  
         <!-- Single Dentist Area -->
       <div class="row">
         <div class="col-12 col-sm-6 col-md-4">
           <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/10.png' %}" alt="">
+            <img src="{% static 'website/img/bg_img/person.jpeg' %}" alt="">
             <!-- Dentist Content -->
             <div class="dentist-content">
               <!-- Social Info -->
               <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
+                <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
               </div>
               <!-- Dentist Info -->
               <div class="dentist-info bg-gradient-overlay">
-                <h5>Michael Barley</h5>
-                <p>Implant Expert</p>
+                <h5>No Name!</h5>
+                <p>Dentist Assistant</p>
               </div>
             </div>
           </div>
         </div>
-
+  
         <div class="col-12 col-sm-6 col-md-4">
           <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/10.png' %}" alt="">
+            <img src="{% static 'website/img/bg_img/person2.jpeg' %}" alt="">
             <!-- Dentist Content -->
             <div class="dentist-content">
               <!-- Social Info -->
               <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
+                <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
               </div>
               <!-- Dentist Info -->
               <div class="dentist-info bg-gradient-overlay">
-                <h5>Michael Barley</h5>
-                <p>Implant Expert</p>
+                <h5>Frau Coluccia</h5>
+                <p>Dentist Assistant</p>
               </div>
             </div>
           </div>
         </div>
-
+  
         <div class="col-12 col-sm-6 col-md-4">
           <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/10.png' %}" alt="">
+            <img src="{% static 'website/img/bg_img/person3.jpeg' %}" alt="">
             <!-- Dentist Content -->
             <div class="dentist-content">
               <!-- Social Info -->
               <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
+                <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
               </div>
               <!-- Dentist Info -->
               <div class="dentist-info bg-gradient-overlay">
-                <h5>Michael Barley</h5>
-                <p>Implant Expert</p>
+                <h5>Frau Di Mattia</h5>
+                <p>Dentist Assistant</p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4">
           <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/10.png' %}" alt="">
+            <img src="{% static 'website/img/bg_img/person4.jpeg' %}" alt="">
             <!-- Dentist Content -->
             <div class="dentist-content">
               <!-- Social Info -->
               <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
+                <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
               </div>
               <!-- Dentist Info -->
               <div class="dentist-info bg-gradient-overlay">
-                <h5>Michael Barley</h5>
-                <p>Implant Expert</p>
+                <h5>Frau Glock</h5>
+                <p>Dentist Assistant</p>
               </div>
             </div>
           </div>
         </div>
-
-
+  
+  
         <!-- Single Dentist Area -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/11.png' %}" alt="">
+            <img src="{% static 'website/img/bg_img/person4.jpeg' %}" alt="">
             <!-- Dentist Content -->
             <div class="dentist-content">
               <!-- Social Info -->
               <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
+                <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
               </div>
               <!-- Dentist Info -->
               <div class="dentist-info bg-gradient-overlay">
-                <h5>Michael Barley</h5>
-                <p>Implant Expert</p>
+                <h5>Person 5 (No Picture & Name)</h5>
+                <p>Dentist Assistant</p>
               </div>
             </div>
           </div>
