--- a/dentist/website/templates/pages/blog-details.html
+++ b/dentist/website/templates/pages/blog-details.html
@@ -7,7 +7,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
-          <h2 class="title">Blog Details</h2>
+          <h2 class="title">Jobs</h2>
         </div>
       </div>
     </div>
@@ -19,7 +19,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="{% url 'home' %}"><i class="fa fa-home"></i> Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Blog Details</li>
+              <li class="breadcrumb-item active" aria-current="page">Jobs</li>
             </ol>
           </nav>
         </div>
@@ -35,26 +35,20 @@
         <div class="col-12 col-lg-8 mb-100">
           <!-- Blog Details Area -->
           <div class="blog-details-area">
-            <img src="{% static 'website/img/bg_img/24.jpg' %}" alt="">
+            
+            <h2 class="post-title">Smile in Weil Job opportunities</h2>
+            
+            <img src="{% static 'website/img/bg_img/jobs.jpg' %}" alt="">
 
-            <h2 class="post-title">How your mouth bacteria can harm lungs</h2>
-            <!-- Accordition -->
-            <section>
-              <h2>Tittle of Accordition</h2>
-              <details>
-                <p>The best toothpaste to use is</p>
-                <summary></summary>
-                <p>Geia sas kai xara sas</p>
-              </details>
-            </section>
-            <!-- Accordition End -->
+            <h3>Dental Assistant</h3>
+            
+            
 
-            <p>Donec tempor, lorem et euismod elefend, est lectus laoreet ante, sed acusan justo diam nec tincidunt interdum ante consectetur dapibus molestie utsalism eleifend metus lacus nec neque. Donec pellentesque nisl nec ligula tempor congue.
-              Nullam rutrum nunc and dapibus interdum. Nunc accumsan dictum mollis. Morbi ac convallis sem, a venenatis lacus. Phasellus in massa in ligula placerat tempus. Quisque id egestas odio, eget accumsan odio. Nunc vel turpis viverra quam
-              imperdiet pellentesque. Nunc vitae sapien eu lorem convallis cursus nec lectus. Praesent cursus ornare lacus ac aliquet.</p>
-            <p>Vestibulum vel ante a quam consectetur volutpat eu a felis. Nullam non dui quis massa condimentum porttitor non ut nisi. Maecenas congue scelerisque purus, eget molestie ligulan volutpatut. Integer artor miss, cursussed efficitur non,
-              consequat a diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Integer vel ullamcorper neque. Quisque convallis ante purus, eget congutor ultrices. Orci varius natoque
-              penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean anunc massa venenatis ullamcorper. Mauris ipsum tellus, faucibus massa non, dapibus suscipit orci.</p>
+            <h5>Job Brief</h5>
+            <p>We are looking for a competent dental assistant who will make the dentist’s office more efficient and pleasant for patients. You’ll ensure excellent customer service and lift administrative and basic dental tasks off the dentist’s shoulders.</p>
+            <p>Dental assistants should be well-organized with great attention to detail. You should be able to follow instructions and respect dental office regulations. We want you to be skilled in providing direct or indirect patient care and able to make office procedures as smooth as possible.</p>
+            <br/>
+            
             <blockquote cite="" class="dento-blockquote d-flex">
               <div class="icon">
                 <i class="fa fa-quote-left"></i>
@@ -64,15 +58,40 @@
                 <h6>Geoffrey Canada / <span>Social Activist</span></h6>
               </div>
             </blockquote>
-            <p>Proin venenatis elementum pretium. Vivamus mollis iaculis mi, a efficitur turpis maximus non. Sed felis sapien, aliquam eu nunc in, tempus interdum turpis. In in porta nulla. Maecenas ut elit nec nibh vehicula auctor eget felis. Nulla
-              finibus dictum augue ullamcorper. Integer nuamcorper lorem sit down amet dignissim tincidunt.
-              Utsu risus feugiat, scelerisque turpis eu, suscipit orci. Fusce indo diam ipsum. Nulla facilisi class aptent taciti
-              litora torquent per conubia nostra, per inceptos himenaeos.</p>
-            <img src="./img/bg-img/25.jpg" alt="">
-            <p>Nunc vitae nisl porttitor, consectetur sapien vel, vulputate orci. Sed viverra, neque action lacinia hendrerit, lectus purus pellentesque dui, eu porttitor enim neque vitae magna. Nunc nec eros nonta risus vestibulum feugiat. In
-              semper tempor sem, eget porttitor dolor convallis sit amet. Praesent ut justo augue. Curabitur id elit nisi. Vivamus varius lacus sit amet nisi lacinia, sed pulvinar odio rhoncus. In sagittis aliquet tellus. Nulla pellentesque, risus
-              vitae porta iaculis, metus tortor cursus felis, at porta odio lorem nonsa mauris. Nullam mattis nulla blandit sapien cursus, quis luctus ex volutpat. Vestibulum santa dui nulla, sed feugiat felis hendrerit euro. Praesent in lobortis
-              orci, vitae finibus tortor. Aliquam nisl sapien, posuere ac accumsan scelerisque, eleifend quis dui, quisque cursus congue nibh pretium blandit.</p>
+
+            <h5>Dental Assistant Responsibilities : </h5>
+            <p>&#8226;Welcoming customers in the dental office</p>
+            <p>&bull;Preparing customers for treatments or checkups ensuring their comfort</p>
+            <p>&#8226;Selecting and setting up instruments, equipment and material needed</p>
+
+            <p>&#8226;Sterilize instruments according to regulations</p>
+            <p>&bull;Assist the dentist through 4-handed dentistry</p>
+            <p>&#8226;Undertake lab tasks as instructed</p>
+
+            <p>&#8226;Provide oral hygiene and post-operative care instructions</p>
+            <p>&bull;Keep the dental room clean and well-stocked</p>
+            <p>&#8226;Schedule appointments</p>
+            <p>&#8226;Maintain accurate patient records and assist with payment procedures</p>
+          
+              <img src="{% static 'website/img/bg_img/25.jpg' %}" alt="">
+
+              <h5>Requirements and Skills : </h5>
+              <p>&#8226;Proven experience as dental assistant</p>
+              <p>&bull;Knowledge of dental instruments and sterilization methods</p>
+              <p>&#8226;Understanding of health & safety regulations</p>
+  
+              <p>&#8226;Ability to perform regulated non-surgical tasks like coronal polishing is a plus</p>
+              <p>&bull;Good computer skills</p>
+              <p>&#8226;Excellent communication and people skills</p>
+  
+              <p>&#8226;Attention to detail</p>
+              <p>&bull;Well-organized and reliable</p>
+              <p>&#8226;High school diploma; graduating from dental assistant school is preferred</p>
+              <p>&#8226;Additional certification or training is an asset (e.g. EFDA)</p>
+
+              <h5>Application</h5>
+              <p>Sumbit your resume via email at info@smile-in-weil.de <br/>
+              We will conctact you shortly for your follow up interview.</p>
           </div>
         </div>
 
@@ -81,39 +100,16 @@
           <div class="dento-sidebar">
 
             <!-- Single Widget Area -->
-            <div class="single-widget-area search-widget">
-              <form action="#" method="post">
-                <input type="search" name="search" class="form-control" placeholder="Search ...">
-                <button type="submit"><i class="icon_search"></i></button>
-              </form>
-            </div>
-
-            <!-- Single Widget Area -->
-            <div class="single-widget-area catagories-widget">
-              <h5 class="widget-title">Categories</h5>
-
-              <!-- catagories list -->
-              <ul class="catagories-list">
-                <li><a href="#">Dentistry Articles</a></li>
-                <li><a href="#">Oral Health</a></li>
-                <li><a href="#">Dental Technology</a></li>
-                <li><a href="#">Kids Care Dental</a></li>
-                <li><a href="#">Healthy Smiles, Inside &amp; Out</a></li>
-              </ul>
-            </div>
-
-            <!-- Single Widget Area -->
             <div class="single-widget-area news-widget">
-              <h5 class="widget-title">Recent News</h5>
+              <h5 class="widget-title">Intresting Facts</h5>
 
               <!-- Single News Area -->
               <div class="single-news-area d-flex align-items-center">
                 <div class="blog-thumbnail">
                   <img src="{% static 'website/img/bg_img/21.jpg' %}" alt="">
                 </div>
-                <div class="blog-content">
-                  <a href="#" class="post-title">Tooth decay: why good dental hygiene is important</a>
-                  <span class="post-date">28 Sep 2018</span>
+                <div class="blog-content">                  
+                  <a class="post-title">Working in a dentistry ...</a>
                 </div>
               </div>
 
@@ -123,8 +119,7 @@
                   <img src="{% static 'website/img/bg_img/22.jpg' %}" alt="">
                 </div>
                 <div class="blog-content">
-                  <a href="#" class="post-title">Six reasons your breath might smell like poop</a>
-                  <span class="post-date">28 Sep 2018</span>
+                  <a class="post-title">Six reasons your breath might smell like poop</a>
                 </div>
               </div>
 
@@ -134,8 +129,7 @@
                   <img src="{% static 'website/img/bg_img/23.jpg' %}" alt="">
                 </div>
                 <div class="blog-content">
-                  <a href="#" class="post-title">Everything you need to know about sinus infection</a>
-                  <span class="post-date">28 Sep 2018</span>
+                  <a class="post-title">Everything you need to know about sinus infection</a>
                 </div>
               </div>
             </div>
