--- a/dentist/website/templates/pages/index.html
+++ b/dentist/website/templates/pages/index.html
@@ -53,48 +53,21 @@
     <div class="container">
       <div class="row align-items-center">
         <!-- About Us Thumbnail -->
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-8">
           <div class="about-us-thumbnail mb-50">
-            <img src="{% static 'website/img/bg_img/15.jpg' %}" alt="">
+            <img src="{% static 'website/img/bg_img/bg_photo_about_us.png' %}" alt="">
           </div>
         </div>
         <!-- About Content -->
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-4">
           <div class="about-us-content mb-50">
             <!-- Section Heading -->
             <div class="section-heading">
-              <h2>About Us</h2>
+              <h2>Über Uns</h2>
               <div class="line"></div>
             </div>
-            <p>Vestibulum condimentum, risus sedones honcus rutrum, salah lacus mollis zurna, nec finibusmi velit advertisis. Proin vitae odin quis magna aliquet laciniae. Etiam auctor, nisi vel. Pellentesque ultrices nisl quam iaculis, nec pulvinar
-              augue.</p>
+            <p>We look into detail and we strive for great care to our dental costumers. Book an appointment with us and you wont be dissapointed</p>
 
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Experience Dentist</h6>
-              <div id="bar1" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="80"></span>
-              </div>
-            </div>
-
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Modern Equipment</h6>
-              <div id="bar2" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="65"></span>
-              </div>
-            </div>
-
-            <!-- Single Skills Area -->
-            <div class="single-skills-area mt-30">
-              <h6>Friendly Staff</h6>
-              <div id="bar3" class="barfiller">
-                <span class="tip"></span>
-                <span class="fill" data-percentage="85"></span>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -168,7 +141,7 @@
               <div class="col-6 col-md-4">
                 <div class="single-service mb-70">
                   <img src="{% static 'website/img/core_img/s1.png' %}" alt="">
-                  <h6>Teeth Whitening</h6>
+                  <h6>Dentalhygiene</h6>
                 </div>
               </div>
 
@@ -176,7 +149,7 @@
               <div class="col-6 col-md-4">
                 <div class="single-service mb-70">
                   <img src="{% static 'website/img/core_img/s2.png' %}" alt="">
-                  <h6>Missing Teeth</h6>
+                  <h6>Zahnersatz</h6>
                 </div>
               </div>
 
@@ -184,7 +157,8 @@
               <div class="col-6 col-md-4">
                 <div class="single-service mb-70">
                   <img src="{% static 'website/img/core_img/s3.png' %}" alt="">
-                  <h6>Teeth Whitening</h6>
+                  <h6>Kinderbehandlung</h6>
+                  
                 </div>
               </div>
 
@@ -192,7 +166,7 @@
               <div class="col-6 col-md-4">
                 <div class="single-service mb-70">
                   <img src="{% static 'website/img/core_img/s4.png' %}" alt="">
-                  <h6>Cosmetic Dentistry</h6>
+                  <h6>Zahnimplantate</h6>
                 </div>
               </div>
 
@@ -200,15 +174,15 @@
               <div class="col-6 col-md-4">
                 <div class="single-service mb-70">
                   <img src="{% static 'website/img/core_img/s5.png' %}" alt="">
-                  <h6>Examination</h6>
+                  <h6>Keramikfüllungen und Inlays</h6>
                 </div>
               </div>
 
               <!-- Single Service -->
               <div class="col-6 col-md-4">
                 <div class="single-service mb-70">
-                  <img src="{% static 'website/img/core_img/s6.png' %}" alt="">
-                  <h6>Teeth Pain</h6>
+                  <img src="{% static 'website/img/core_img/s6.png' %}" alt="" > <!-- όταν το πατάς να σε μεταφέρει στην -->
+                  <h6>Alles Leistungen</h6>
                 </div>
               </div>
             </div>
@@ -225,130 +199,136 @@
   </section>
   <!-- Dento Service Area End -->
 
-  <!-- ***** Dento Dentist Area Start ***** -->
-  <section class="dentist-area section-padding-100-0">
-    <div class="container">
-      <div class="row">
-        <!-- Section Heading -->
-        <div class="col-12">
-          <div class="section-heading text-center">
-            <h2>Our Team</h2>
-            <div class="line"></div>
-          </div>
+ <!-- ***** Dento Dentist Area Start ***** -->
+ <section class="dentist-area section-padding-100-0">
+  <div class="container">
+    <div class="row">
+      <!-- Section Heading -->
+      <div class="col-12">
+        <div class="section-heading text-center">
+          <h2>Das Team</h2>
+          <div class="line"></div>
         </div>
       </div>
+    </div>
 
-      <div class="row">
-        <!-- Single Dentist Area -->
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/testperson.jpeg' %}" alt="">
-            <!-- Dentist Content -->
-            <div class="dentist-content">
-              <!-- Social Info -->
-              <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
-              </div>
-              <!-- Dentist Info -->
-              <div class="dentist-info bg-gradient-overlay">
-                <h5>No Name 1</h5>
-                <p>Assistant</p>
-              </div>
+    <div class="row">
+      <!-- Single Dentist Area -->
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="single-dentist-area mb-100">
+          <img src="{% static 'website/img/bg_img/milli1_nt.jpg' %}" alt="">
+          <!-- Dentist Content -->
+          <div class="dentist-content">
+            <!-- Social Info -->
+            <div class="dentist-social-info">
+              <a><img src="{% static 'website/img/core_img/dentist.png' %}" alt=""></a>
             </div>
-          </div>
-        </div>
-
-        <!-- Single Dentist Area -->
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/milli1.jpg' %}" alt="">
-            <!-- Dentist Content -->
-            <div class="dentist-content">
-              <!-- Social Info -->
-              <div class="dentist-social-info">
-                <a href="#"><img src="{% static 'website/img/core_img/dentist.png' %}" alt=""></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
-              </div>
-              <!-- Dentist Info -->
-              <div class="dentist-info bg-gradient-overlay">
-                <h5>Dimitra Karvouni</h5>
-                <p>Dentist</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Single Dentist Area -->
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/testperson2.jpeg' %}" alt="">
-            <!-- Dentist Content -->
-            <div class="dentist-content">
-              <!-- Social Info -->
-              <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
-              </div>
-              <!-- Dentist Info -->
-              <div class="dentist-info bg-gradient-overlay">
-                <h5>No Name 2</h5>
-                <p>Assistant</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-        <div class="row">
-          <!-- Single Dentist Area Test Here -->
-          <div class="col-12 col-sm-6 col-md-4">
-            <div class="single-dentist-area mb-100">
-              <img src="{% static 'website/img/bg_img/testperson3.jpeg' %}" alt="">
-              <!-- Dentist Content -->
-              <div class="dentist-content">
-                <!-- Social Info -->
-                <div class="dentist-social-info">
-                  <a href="#"><i class="fa fa-facebook"></i></a>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-google-plus"></i></a>
-                </div>
-                <!-- Dentist Info -->
-                <div class="dentist-info bg-gradient-overlay">
-                  <h5>No Name 3</h5>
-                  <p>Assistant</p>
-                </div>
-              </div>
-            </div>
-          </div>           
-
-        <!-- Single Dentist Area -->
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="single-dentist-area mb-100">
-            <img src="{% static 'website/img/bg_img/testperson4.jpeg' %}" alt="">
-            <!-- Dentist Content -->
-            <div class="dentist-content">
-              <!-- Social Info -->
-              <div class="dentist-social-info">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-google-plus"></i></a>
-              </div>
-              <!-- Dentist Info -->
-              <div class="dentist-info bg-gradient-overlay">
-                <h5>No name 4</h5>
-                <p>Assistant</p>
-              </div>
+            <!-- Dentist Info -->
+            <div class="dentist-info bg-gradient-overlay">
+              <h5>Dimitra Karvouni</h5>
+              <p>Zahnärztin & Kieferorthopädie</p>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- ***** Dento Dentist Area End ***** -->
+
+      <!-- Single Dentist Area -->
+    <div class="row">
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="single-dentist-area mb-100">
+          <img src="{% static 'website/img/bg_img/person.jpeg' %}" alt="">
+          <!-- Dentist Content -->
+          <div class="dentist-content">
+            <!-- Social Info -->
+            <div class="dentist-social-info">
+              <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
+            </div>
+            <!-- Dentist Info -->
+            <div class="dentist-info bg-gradient-overlay">
+              <h5>No Name!</h5>
+              <p>Dentist Assistant</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="single-dentist-area mb-100">
+          <img src="{% static 'website/img/bg_img/person2.jpeg' %}" alt="">
+          <!-- Dentist Content -->
+          <div class="dentist-content">
+            <!-- Social Info -->
+            <div class="dentist-social-info">
+              <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
+            </div>
+            <!-- Dentist Info -->
+            <div class="dentist-info bg-gradient-overlay">
+              <h5>Frau Coluccia</h5>
+              <p>Dentist Assistant</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="single-dentist-area mb-100">
+          <img src="{% static 'website/img/bg_img/person3.jpeg' %}" alt="">
+          <!-- Dentist Content -->
+          <div class="dentist-content">
+            <!-- Social Info -->
+            <div class="dentist-social-info">
+              <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
+            </div>
+            <!-- Dentist Info -->
+            <div class="dentist-info bg-gradient-overlay">
+              <h5>Frau Di Mattia</h5>
+              <p>Dentist Assistant</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="single-dentist-area mb-100">
+          <img src="{% static 'website/img/bg_img/person4.jpeg' %}" alt="">
+          <!-- Dentist Content -->
+          <div class="dentist-content">
+            <!-- Social Info -->
+            <div class="dentist-social-info">
+              <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
+            </div>
+            <!-- Dentist Info -->
+            <div class="dentist-info bg-gradient-overlay">
+              <h5>Frau Glock</h5>
+              <p>Dentist Assistant</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Single Dentist Area -->
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="single-dentist-area mb-100">
+          <img src="{% static 'website/img/bg_img/person4.jpeg' %}" alt="">
+          <!-- Dentist Content -->
+          <div class="dentist-content">
+            <!-- Social Info -->
+            <div class="dentist-social-info">
+              <a><img src="{% static 'website/img/core_img/assistant.png' %}" alt=""></a>
+            </div>
+            <!-- Dentist Info -->
+            <div class="dentist-info bg-gradient-overlay">
+              <h5>Person 5 (No Picture & Name)</h5>
+              <p>Dentist Assistant</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ***** Dento Dentist Area End ***** -->
 
     <!-- Book An Oppointment Area Start -->
     <section class="book-an-oppointment-area section-padding-100 bg-img bg-gradient-overlay jarallax clearfix" style="background-image: url({% static 'website/img/bg_img/12.jpg' %});">
@@ -368,7 +348,8 @@
           <div class="col-12">
             <!-- Appointment Form -->
             <div class="appointment-form">
-              <form action="#" method="post">
+              <form action= "{% url 'appointment' %}" method="post">
+                {% csrf_token %}
                 <div class="row">
                   <div class="col-md-6">
                     <div class="form-group mb-30">
@@ -387,12 +368,14 @@
                   </div>
                   <div class="col-md-6">
                     <div class="form-group mb-30">
-                      <select name="your-scheldule" class="form-control">
+                      <select name="your-schedule" class="form-control">
                         <option value="Choose Your Scheldule">Choose Your Scheldule</option>
-                        <option value="9 AM to 10 AM">9 AM to 10 AM</option>
-                        <option value="11 AM to 12 PM">11 AM to 12 PM</option>
-                        <option value="2 PM to 4 PM">2 PM to 4 PM</option>
-                        <option value="8 PM to 10 PM">8 PM to 10 PM</option>
+                        <option value="As soon as ">Kontaktieren Sie mich so schnell wie möglich</option>
+                        <option value="8:00 to 10:00">Kontaktieren Sie mich um 8:00 - 10:00</option>
+                        <option value="10:00 to 12:00">Kontaktieren Sie mich um 10:00 - 12:00</option>
+                        <option value="13:30 to 15:00">Kontaktieren Sie mich um 13:30 - 15:00</option>
+                        <option value="15:00 to 17:00">Kontaktieren Sie mich um 15:00 - 17:00</option>
+                        <option value="17:00 to 19:00">Kontaktieren Sie mich um 17:00 - 19:00</option>
                       </select>
                     </div>
                   </div>
@@ -402,7 +385,7 @@
                     </div>
                   </div>
                   <div class="col-12 text-center">
-                    <button type="submit" class="btn dento-btn">Booking Now</button>
+                    <button type="submit" class="btn dento-btn">Senden</button>
                   </div>
                 </div>
               </form>
@@ -494,7 +477,7 @@
           </div>
         </div>
       </div>
-
+      
       <div class="row">
         <!-- Single Blog Item -->
         <div class="col-12 col-md-6 col-lg-4">
@@ -506,12 +489,10 @@
             <div class="blog-content">
               <a href="{% url 'blog_details' %}" class="post-title">How your mouth bacteria can harm your lungs</a>
               <!-- Accordition -->
-              <p>The best toothpaste to use is the AIM gold which has ...</p>
               <section>
                 <details>
-                  <p>The best toothpaste to use is</p>
-                  <summary></summary>
-                  <p>Geia sas kai xara sas</p>
+                  <summary><p style = "display: inline;">Bacteria can harm your lungs because</p></summary>
+                  <p>there are bacteria and they might harm your lungs</p>
                 </details>
               </section>
               <!-- Accordition End -->
@@ -528,7 +509,12 @@
             <!-- Blog Content -->
             <div class="blog-content">
               <a href="{% url 'blog_details' %}" class="post-title">What is the best kind of toothpaste to use?</a>
-              <p>The best toothpaste to use is the AIM gold which has ...</p>
+              <section>
+                <details>
+                  <summary><p style = "display: inline;">The best toothpaste to use is the AIM</p></summary>
+                  <p>gold because it has a very nice tasted :p</p>
+                </details>
+              </section>
             </div>
           </div>
         </div>
@@ -542,14 +528,17 @@
             <!-- Blog Content -->
             <div class="blog-content">
               <a href="{% url 'blog_details' %}" class="post-title">Why you should avoid sipping your drinks</a>
-              <p>You should avoid sipping your drinks because things get stuck in your teeth and ...</p>
+              <section>
+                <details>
+                  <summary><p style = "display: inline;">You should avoid sipping your drinks</p></summary>
+                  <p>because sipping your drinks is something that you should avoid</p>
+                </details>
+              </section>
             </div>
           </div>
-          
         </div>
-
       </div>
-
+    </div>
   </section>
   <!-- ***** Blog Area End ***** -->
 
