--- a/dentist/website/templates/pages/service.html
+++ b/dentist/website/templates/pages/service.html
@@ -7,7 +7,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
-          <h2 class="title">Service</h2>
+          <h2 class="title">Leistungen</h2>
         </div>
       </div>
     </div>
@@ -19,7 +19,7 @@
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="{% url 'home' %}"><i class="fa fa-home"></i> Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Service</li>
+              <li class="breadcrumb-item active" aria-current="page">Leistungen</li>
             </ol>
           </nav>
         </div>
@@ -37,11 +37,15 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-service--area text-center mb-50">
             <div class="icon--">
-              <img src="{% static 'website/img/core_img/s6.png' %}" alt="">
+              <img src="{% static 'website/img/core_img/ss1.png' %}" alt="">
             </div>
-            <h5>Teeth Whitening</h5>
-            <p>In pretium neque a libero congue. Elit diam lectus. Prasent lacinia vitae sit
-              mattis mollis maximus.</p>
+            <h5>Professionelle Zahnreinigung, Dentalhygiene</h5>
+            <section>
+              <details>
+                <summary>Einzelheiten</summary>
+                <p>Mit der häuslichen Zahnpflege können nur selten alle Zahnflächen, insbesondere die hinteren Zahnbereiche und Zwischenräume, perfekt gereinigt werden. Die professionelle Zahnreinigung ist eine Intensivreinigung, bei der krankmachende und störende Beläge/Verfärbungen gründlich entfernt werden.</p>
+              </details>
+            </section>
           </div>
         </div>
 
@@ -49,11 +53,15 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-service--area text-center mb-50">
             <div class="icon--">
-              <img src="{% static 'website/img/core_img/s7.png' %}" alt="">
+              <img src="{% static 'website/img/core_img/ss2.png' %}" alt="">
             </div>
-            <h5>Dental Implants</h5>
-            <p>In pretium neque a libero congue. Elit diam lectus. Prasent lacinia vitae sit
-              mattis mollis maximus.</p>
+            <h5>Zahnfleischbehandlung</h5>
+            <section>
+              <details>
+                <summary>Einzelheiten</summary>
+                <p>Parodontitis ist eine chronische Erkrankung des zahnumgebenden Gewebes (Zahnhalteapparat). Sie führt ohne Behandlung zu Knochenabbau und tiefen Zahnfleischtaschen. Zahnverlust ist die Folge. Anzeichen für Parodontitis sind geschwollenes Zahnfleisch, erhöhte Blutungsneigung und Mundgeruch. Eine tiefe Reinigung der Zahnfleischtaschen unter lokaler Betäubung, bei schweren Fällen eine zusätzliche Verabreichung von Antibiotika, kann einen weiteren Knochenabbau verhindern. Regelmäßige Kontrollen des Zahnfleischs und professionelle Zahnreinigungen sind nach einer Parodontitis Behandlung für ein nachhaltiges Ergebnis notwendig.</p>
+              </details>
+            </section>
           </div>
         </div>
 
@@ -61,11 +69,15 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-service--area text-center mb-50">
             <div class="icon--">
-              <img src="{% static 'website/img/core_img/s8.png' %}" alt="">
+              <img src="{% static 'website/img/core_img/ss3.png' %}" alt="">
             </div>
-            <h5>Missing Teeth</h5>
-            <p>In pretium neque a libero congue. Elit diam lectus. Prasent lacinia vitae sit
-              mattis mollis maximus.</p>
+            <h5>Wurzelkanalbehandlung</h5>
+            <section>
+              <details>
+                <summary>Einzelheiten</summary>
+                <p>Ziel ist die langfristige Erhaltung des erkrankten Zahns. Die Behandlung entzündeter Zahnwurzeln führen wir in unserer Praxis mit modernsten Methoden durch. Die Wurzelkanäle werden dabei maschinell aufbereitet, sorgfältig gespült und entzündetes Gewebe wird entfernt. Wurzelkanalbehandelte Zähne benötigen jedoch oft eine Überkronung, da sie mit der Zeit spröde werden und abbrechen können.</p>
+              </details>
+            </section>
           </div>
         </div>
 
@@ -73,11 +85,15 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-service--area text-center mb-50">
             <div class="icon--">
-              <img src="{% static 'website/img/core_img/s9.png' %}" alt="">
+              <img src="{% static 'website/img/core_img/ss4.png' %}" alt="">
             </div>
-            <h5>Cosmetic Dentistry</h5>
-            <p>In pretium neque a libero congue. Elit diam lectus. Prasent lacinia vitae sit
-              mattis mollis maximus.</p>
+            <h5>Knirscherschienen</h5>
+            <section>
+              <details>
+                <summary>Einzelheiten</summary>
+                <p>Unbewusstes Zähneknirschen, meistens in der Nacht, verursacht den Verlust von Zahnhartsubstanz, sowie Kopf- und Nackenschmerzen. Die Ursachen können Stress, Alltagsprobleme oder Ängste sein. Knirscherschienen schützen Ihre Zahnhartsubstanz und helfen dabei die Kiefergelenke und Kaumuskeln zu entlasten.</p>
+              </details>
+            </section>
           </div>
         </div>
 
@@ -85,11 +101,15 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-service--area text-center mb-50">
             <div class="icon--">
-              <img src="{% static 'website/img/core_img/s10.png' %}" alt="">
+              <img src="{% static 'website/img/core_img/ss5.png' %}" alt="">
             </div>
-            <h5>Examination</h5>
-            <p>In pretium neque a libero congue. Elit diam lectus. Prasent lacinia vitae sit
-              mattis mollis maximus.</p>
+            <h5>Keramikfüllungen und Inlays</h5>
+            <section>
+              <details>
+                <summary>Einzelheiten</summary>                
+                <p>Bei großen Zahndefekten sind Füllungen aus Keramik die beste Versorgung. Wir stellen mit dem bewährten und marktführenden CEREC-Verfahren eine individuell für Ihren Zahn angepasste Keramikversorgung her. Dazu sind zwei Termine notwendig. Zunächst wird der Zahn präpariert, bei Ihrem zweiten Termin setzen wir die passgenaue Restauration ein.</p>
+              </details>
+            </section>
           </div>
         </div>
 
@@ -97,15 +117,67 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="single-service--area text-center mb-50">
             <div class="icon--">
-              <img src="{% static 'website/img/core_img/s6.png' %}" alt="">
+              <img src="{% static 'website/img/core_img/ss6.png' %}" alt="">
             </div>
-            <h5>Teeth Pain</h5>
-            <p>In pretium neque a libero congue. Elit diam lectus. Prasent lacinia vitae sit
-              mattis mollis maximus.</p>
+            <h5>Kinderbehandlung</h5> 
+            <section>
+              <details>
+              <summary>Einzelheiten</summary>
+                <p>Kinder sollen unbeschwert die ersten Zahnarztbesuche erleben und so Vertrauen gewinnen. Deshalb empfehlen wir bereits ab dem 3. Lebensjahr regelmäßig 2x jährlich einen Kontrolltermin. Frühzeitiges Erlernen der richtigen Zahnputztechnik und regelmäßige Zahnprophylaxe bei Kindern und Jugendlichen sind grundlegend für ein lebenslanges Lächeln.</p>
+              </details>
+            </section>
           </div>
         </div>
 
+        <!-- Single Service Area -->
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="single-service--area text-center mb-50">
+            <div class="icon--">
+              <img src="{% static 'website/img/core_img/ss7.png' %}" alt="">
+            </div>
+            <h5>Zahnersatz</h5>
+            <section>
+              <details>
+                <summary>Sie benötigen oder wünschen sich Zahnersatz?</summary>
+                <p>Eine Krone ummantelt den Zahn und stellt ihn wieder her. Sie kann bei größeren Zahndefekten und wurzel- kanalbehandelten Zähnen eingesetzt werden. Eine Brücke schließt eine vorhandene Lücke, indem sie an den benachbarten Zähnen der Lücke befestigt wird. 
+                  Herausnehmbarer Zahnersatz (Teil-/Vollprothesen): Teilprothesen ersetzen größere oder mehrere Lücken pro Kiefer. Vollprothesen ersetzen alle Zähne im Kiefer.</p>
+              </details>
+            </section>
+          </div>
+        </div>
+
+        <!-- Single Service Area -->
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="single-service--area text-center mb-50">
+            <div class="icon--">
+              <img src="{% static 'website/img/core_img/ss8.png' %}" alt="">
+            </div>
+            <h5>Bleaching</h5>
+            <section>
+              <details>
+                <summary>Question about Bleaching</summary>
+                <p>Die Zahnfarbe verändert sich mit den Jahren durch Einlagerungen von Farbpartikeln aus Genussmitteln wie z.B. Kaffee, Nikotin oder Rotwein. Durch Bleaching bekommen Ihre Zähne einen deutlich helleren Weißton. Das Verfahren ist wissenschaftlich nachgewiesen unschädlich für Ihre Zähne. Vor dem Bleaching ist eine professionelle Zahnreinigung obligatorisch.</p>
+              </details>
+            </section>
+        </div>
       </div>
+        <!-- Single Service Area -->
+        <div class="col-12 col-sm-6 col-lg-4">
+          <div class="single-service--area text-center mb-50">
+            <div class="icon--">
+              <img src="{% static 'website/img/core_img/ss9.png' %}" alt="">
+            </div>
+            <h5>Zahnimplantate</h5>
+            <section>
+              <details>
+                <summary>Question about Zahnimplantate</summary>
+                <p>Für größere kieferchirurgische Eingriffe sowie Implantate vertrauen wir auf kompetente und erfahrene Kooperationspartner, an den wir Sie gerne überweisen.</p>
+              </details>
+            </section>
+          </div>
+        </div>
+
+      
     </div>
   </section>
   <!-- ***** Services Area End ***** -->
